--- a/pages/create-playlist.html
+++ b/pages/create-playlist.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="The beginning of a brand new web app" />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="The beginning of a brand new web app" />
-	<link rel="stylesheet" href="./styles.css" />
-</head>
-
-<body>
-	<h1>Create Playlist</h1>
-</body>
-
+  <body>
+    <h1>Create Playlist</h1>
+    <div>
+      <button>Private</button>
+      <button>Public</button>
+      <a href="">Related Songs</a>
+    </div>
+  </body>
 </html>
