--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="The beginning of a brand new web app" />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="The beginning of a brand new web app" />
-	<link rel="stylesheet" href="./styles.css" />
-</head>
-
-<body>
-	<header>
-		<h1> Inside Voice</h1>
-		<a href="./pages/create-playlist.html">Create Playlist</a>
-		<a href="./pages/signin-signup.html">.Sign In / Sign Up</a>
-		<a href="./pages/help.html">Help</a>
-		<a href="./pages/accountsettings.html">Account Settings</a>
-	</header>
-</body>
-
+  <body>
+    <header>
+      <h1>Inside Voice</h1>
+      <div>
+        <a href="./pages/create-playlist.html">Create Playlist</a>
+        <a href="./pages/signin-signup.html">.Sign In / Sign Up</a>
+        <a href="./pages/help.html">Help</a>
+        <a href="./pages/accountsettings.html">Account Settings</a>
+      </div>
+    </header>
+  </body>
 </html>
